# openapi.yaml
@@ -455,7 +455,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /projects/{id}/dataset:
+  /projects/{id}/datasets:
     get:
       description: |
         Returns all datasets that you can see.
@@ -790,6 +790,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /organization_roles:
+    get:
+      description: |
+        Returns all of the current users organization roles.
+      operationId: listOrganizationRoles
+      parameters: []
+      responses:
+        '200':
+          description: organization roles response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/OrganizationRole'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /object_roles:
     get:
       description: |
@@ -929,6 +953,33 @@ components:
       properties:
         data:
           type: object
+    OrganizationRole:
+      type: object
+      properties:
+        roles:
+          type: array
+          items:
+            type: string
+            example: admin
+        organization:
+          type: object
+          properties:
+            id:
+              type: string
+              format: hex
+              example: fa43f7fafcd832483dfca
+            name:
+              type: string
+              example: acme
+            title:
+              type: string
+              example: ACME!
+            description:
+              type: string
+              example: The mighty ACME corporation.
+            source:
+              type: string
+              example: worf
     ObjectRole:
       allOf:
         - $ref: '#/components/schemas/BaseObjectRole'
